<resources>
    <string name="app_name">5 Things - Final Project Beginner</string>
    <string name="square_fact">
        In geometry, a square is a regular quadrilateral, which means that it has four equal sides and four equal angles (90-degree angles, or right angles).It can also be defined as a rectangle in which two adjacent sides have equal length. A square with vertices ABCD would be denoted ABCD.\n\nArea formula = a x a
    </string>
    <string name="rectangle_fact">
        In Euclidean plane geometry, a rectangle is a quadrilateral with four right angles. It can also be defined as an equiangular quadrilateral, since equiangular means that all of its angles are equal (360°/4 = 90°). It can also be defined as a parallelogram containing a right angle. A rectangle with four sides of equal length is a square. The term oblong is occasionally used to refer to a non-square rectangle. A rectangle with vertices ABCD would be denoted as ABCD.\n\nArea formula = a x b
    </string>
    <string name="trapezoid_fact">
        In Euclidean geometry, a convex quadrilateral with at least one pair of parallel sides is referred to as a trapezoid (pronounced: /ˈtɹæpəzɔɪd/) in American and Canadian English but as a trapezium in English outside North America. The parallel sides are called the bases of the trapezoid and the other two sides are called the legs or the lateral sides (if they are not parallel; otherwise there are two pairs of bases).\n\nArea formula = h/2 x ( b1 + b2 )
    </string>
    <string name="circle_fact">
        A circle is a simple closed shape in Euclidean geometry. It is the set of all points in a plane that are at a given distance from a given point, the centre; equivalently it is the curve traced out by a point that moves so that its distance from a given point is constant. The distance between any of the points and the centre is called the radius.\n\nA circle is a simple closed curve which divides the plane into two regions: an interior and an exterior. In everyday use, the term "circle" may be used interchangeably to refer to either the boundary of the figure, or to the whole figure including its interior; in strict technical usage, the circle is only the boundary and the whole figure is called a disc.\n\nA circle may also be defined as a special kind of ellipse in which the two foci are coincident and the eccentricity is 0, or the two-dimensional shape enclosing the most area per unit perimeter squared, using calculus of variations.\n\nArea formula = 22/7 x r
    </string>
    <string name="triangle_fact">
        A triangle is a polygon with three edges and three vertices. It is one of the basic shapes in geometry. A triangle with vertices A, B, and C is denoted ABC.\n\nIn Euclidean geometry any three points, when non-collinear, determine a unique triangle and a unique plane (i.e. a two-dimensional Euclidean space). This article is about triangles in Euclidean geometry except where otherwise noted.\n\nArea formula = 1/2 x b x h
    </string>

    <string name="square_quiz">
        Given the value of a = 10 meter. How much is the area value of the square ( in meter square ) ?
    </string>
    <string name="rectangle_quiz">
        Given the value of a = 10 meter and b = 20 meter. How much is the area value of the rectangle ( in meter square ) ?
    </string>
    <string name="trapezoid_quiz">
        Given the value of b1 = 15 meter, b2 = 10 meter, and h = 10 meter. How much is the area value of the trapezoid ( in meter square ) ?
    </string>
    <string name="circle_quiz">
        Given the value of r = 14 meter. How much is the area value of the circle ( in meter square ) ?
    </string>
    <string name="triangle_quiz">
        Given the value of b = 15 meter and h = 10 meter. How much is the area value of the square ( in meter square ) ?
    </string>
</resources>
