<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_quiz"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="app.com.example.android.finalprojectbeginner.SquareActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="quiz"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="16dp">

            <LinearLayout
                android:id="@+id/square_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/square" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/square_quiz" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/square_answer_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/square_top"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Answer :" />

                <EditText
                    android:id="@+id/square_answer"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="16dp">

            <LinearLayout
                android:id="@+id/rectangle_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/rect" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/rectangle_quiz" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/rectangle_answer_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rectangle_top"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Answer :" />

                <EditText
                    android:id="@+id/rectangle_answer"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="16dp">

            <LinearLayout
                android:id="@+id/trapezoid_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/trap" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/trapezoid_quiz" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/trapezoid_answer_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/trapezoid_top"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Answer :" />

                <EditText
                    android:id="@+id/trapezoid_answer"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="16dp">

            <LinearLayout
                android:id="@+id/circle_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/circle" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/circle_quiz" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/circle_answer_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/circle_top"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Answer :" />

                <EditText
                    android:id="@+id/circle_answer"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="16dp">

            <LinearLayout
                android:id="@+id/triangle_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/triangle" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/triangle_quiz" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/triangle_answer_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/triangle_top"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Answer :" />

                <EditText
                    android:id="@+id/triangle_answer"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="back"/>
            <Button
                android:id="@+id/answer_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="answer"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>